add hover class in coffeescript

--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 <% @statuses.each do | status | %>
-<div class="status">
+<div class="status" hover>
 	<strong><%= status.name %></strong>
 	<p><%= status.content %> </p>
 	<div class="meta">
