--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -2,6 +2,8 @@
 	<h1>All of the Statuses</h1>
 </div>
 
+<%= link_to "Post a New Status", new_status_path, class: "btn" %>
+
 <% @statuses.each do | status | %>
 <div class="status" hover>
 	<strong><%= status.name %></strong>
